--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,14 +1,14 @@
 {
-  "heading": "Prevalence of cocaine use in Europe",
-  "subheading": "Prevalence of cocaine use of young adults (15-34) in Europe in countries of the European Union in 2022",
+  "heading": "Prevalence of amphetamine use in Europe",
+  "subheading": "Prevalence of amphetamine use of young adults (15-34) in Europe in countries of the European Union in 2022",
   "legend1": "No data available",
   "tooltip1": "of young adults",
   "textSourceDescription": "Source",
   "textSource": "EMCDDA",
   "textNoteDescription": "Note",
-  "textNote": "In the European Union, surveys indicate that almost 2.3 million 15- to 34-year-olds (2.3 % of this age group) used cocaine in the last year.",
+  "textNote": "Surveys, which group amphetamine and methamphetamine together, conducted by 25 EU countries between 2016 and 2022 suggest that 1.3 million young adults (15 to 34) used amphetamines during the last year (1.3 % of this age group). ",
   "textDataAccess": "Access the data",
-  "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/cocaine_en",
+  "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
   "textCountryClick": "Click for more info",
   "extraInfoText_BE": "",
   "extraInfoLink_BE": "",
