Updated text in all language json files

--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -9,23 +9,5 @@
   "textNote": "Surveys, which group amphetamine and methamphetamine together, conducted by 25 EU countries between 2016 and 2022 suggest that 1.3 million young adults (15 to 34) used amphetamines during the last year (1.3 % of this age group). ",
   "textDataAccess": "Access the data",
   "linkDataAccess": "https://www.emcdda.europa.eu/publications/european-drug-report/2023/synthetic-stimulants_en",
-  "textCountryClick": "Click for more info",
-  "extraInfoText_BE": "",
-  "extraInfoLink_BE": "",
-  "extraInfoText_DE": "",
-  "extraInfoLink_DE": "",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "",
-  "extraInfoLink_IT": "",
-  "extraInfoText_LU": "",
-  "extraInfoLink_LU": "",
-  "extraInfoText_PL": "",
-  "extraInfoLink_PL": "",
-  "extraInfoText_RO": "",
-  "extraInfoLink_RO": "",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Click for more info"
 }
